more ui updates including fixed navbar

--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
 
 <!-- Knowledge Section-->
 
-<section style="background-color: indianred; ">
+<section style="background-color: var(--blue);">
 
     <div class="container section-width align-items-center text-lg-left" style="background-color: var(--blue);">
         <h3 class="section-headers" style="color: white">Knowledge</h3>
@@ -305,7 +305,7 @@
 
 <!-- About Me Section-->
 
-<div style="width: 100%; background-color: red;">
+<div style="width: 100%; background-color: var(--blue);">
 
     <div class="container section-width align-items-center text-lg-left text-color" style="background-color: var(--blue)">
         <h3 class="section-headers">About Me</h3>
