--- a/PortfolioProjectMVC/wwwroot/css/site.css
+++ b/PortfolioProjectMVC/wwwroot/css/site.css
@@ -34,35 +34,22 @@ body {
     z-index: 3;
     box-shadow: 0px 5px 15px 10px rgba(0,0,0,0.1);
     min-height: 75px;
+    max-height: 75px;
     position: fixed;
     width: 100%;
 }
+
+
+.navbar-formatting {
+    max-width: 1600px;
+    min-width: 580px; /* This needs to change here */
+}
+
 
 @media (max-width: 850px) {
     .d-flex.title-for-hiding {
         display: none;
         visibility: hidden
-    }
-}
-
-/* Your existing media queries for other elements */
-@media (min-width: 320px) {
-    .navbar-logo-layout {
-        min-width: 50%;
-    }
-
-    .navbar-icon-layout {
-        min-width: 50%;
-    }
-}
-
-@media (min-width: 768px) {
-    .navbar-logo-layout {
-        min-width: 75%;
-    }
-
-    .navbar-icon-layout {
-        min-width: 25%;
     }
 }
 
