--- a/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
+++ b/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
@@ -14,26 +14,22 @@
     <header>
 
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white navbar-styles">
-
             <div class="d-flex container navbar-formatting" style="justify-content: space-between; flex-wrap: nowrap;">
-
-                <div class="d-flex" style="align-items: center;">
-                    <img src="/Assets/images/SVGs/SC.svg" style="max-height: 50px; max-width: 50%; padding: 0px;">
-                    <a class="font-weight-bold" style="font-size: 1.5rem; max-height: 50px; color: var(--blue); align-items: center; white-space: nowrap; justify-content: center;" asp-area="" asp-controller="Home" asp-action="Index">Samuel Cole</a>
+                <div class="d-flex align-items-center">
+                    <div style="display: flex; align-items: center;">
+                        <img src="/Assets/images/SVGs/SC.svg" style="max-width: 50px; max-height: 50px; padding: 0px;">
+                        <a class="font-weight-bold" style="font-size: 1.5rem; color: var(--blue); white-space: nowrap;">Samuel Cole</a>
+                    </div>
                 </div>
-
-
-
                 <div class="d-flex title-for-hiding" style="font-size: 1.5rem; color: var(--grey)">Front-End Developer</div>
-
-                <div class="d-flex" style="justify-content: center; align-items: center;">
-                    <img src="/Assets/images/icons8-github-500.svg" alt="GitHub" style="max-height: 50px; max-width: 50%; padding: 0px; width: 50%;">
-                    <img src="/Assets/images/icons8-linkedin-512.svg" alt="LinkedIn" style="max-height: 50px; max-width: 50%; padding: 0px; width: 50%;">
+                <div class="d-flex" style="justify-content: flex-start; align-items: center;">
+                    <img src="/Assets/images/icons8-github-500.svg" alt="GitHub" style="max-height: 50px; max-width: 50px; padding: 0px;">
+                    <img src="/Assets/images/icons8-linkedin-512.svg" alt "LinkedIn" style="max-height: 50px; max-width: 50px; padding: 0px;">
                 </div>
-
             </div>
-        
         </nav>
+
+
 
 
     </header>
