--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -170,7 +170,7 @@
                     <div class="section col-md-6 margin-remover">
                         <div class="project-text-section-size" style="background-color: white; margin-left: auto">
                             <div class="project-titles">
-                                <h1 class="h1 project-titles">Project Title</h1>
+                                <h1 class="h1 project-titles">My Portfolio Website</h1>
                                 <p class="project-text">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -408,7 +408,7 @@
 
 <!-- Contact Section -->
 
-<div style="width: 100%; background-color: lightgreen;">
+<div style="width: 100%; background-color: white;">
     
     <div class="container section-width align-items-center text-lg-left" style="background-color: white;">
         <h3 class="section-headers" style="color: var(--blue)">Contact</h3>
