ui updates for buttons on about me

--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -332,72 +332,74 @@
             </div>
 
             <div class="col-md-6" style="padding-right: 10px;">
-                <div class="row" style="background-color: red; min-height: 300px; max-width: 500px; margin-left: auto; margin-right: 0px;">
 
-                    <div class="col-12" style="background-color: lightgray; margin-bottom: 15px;">
-                        <div class="row">
+                <div class="row button-section">
 
-                            <div class="d-flex col-9" style="padding: 10px">
-                                <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" style="max-width: 80px;" />
-                                <div style="max-width: 220px;">
-                                    <p class="d-flex">Code Samples on Github</p>
+                    <div class="col-12 button-styles" >
+                        <a href="https://github.com/Sam89001" target="_blank">
+                            <div class="row">
+
+                                <div class="d-flex col-9" style="padding: 10px">
+                                    <img src="/Assets/images/SVGs/github-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" style="max-width: 80px;" />
+                                    <div class="container" style="max-width: 220px; margin-left: 15px;" >
+                                        <p class="d-flex about-me-text">Code Samples on Github</p>
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="d-flex col-3">
-                                <div style="background-color: darkgray; padding: 10px;">
-                                    <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                <div class="d-flex col-3">
+                                    <div style="background-color: darkgray; padding: 10px;">
+                                        <img src="/Assets/images/SVGs/linked.svg" class="img-fluid" alt="Responsive Image" />
+                                    </div>
                                 </div>
-                            </div>
 
-                        </div>
+                            </div>
+                        </a>
                     </div>
 
-                    <div class="col-12" style="background-color: lightgray; margin-bottom: 15px;">
-                        <div class="row">
+                    <div class="col-12 button-styles">
+                        <a href="https://www.linkedin.com/in/samuel-cole-586582229/" target="_blank">
+                            <div class="row">
 
-                            <div class="d-flex col-6" style="padding: 10px">
-                                <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" style="max-width: 80px;" />
-                                <div style="max-width: 220px;">
-                                    <p class="d-flex">Code Samples on Github</p>
+                                <div class="d-flex col-9" style="padding: 10px">
+                                    <img src="/Assets/images/SVGs/linkedin-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" style="max-width: 80px;" />
+                                    <div class="container" style="max-width: 220px; margin-left: 15px;">
+                                        <p class="d-flex about-me-text">Linked In Profile</p>
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="d-flex col-3">
-                                <div style="background-color: darkgray; padding: 10px;">
-                                    <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                <div class="d-flex col-3">
+                                    <div style="background-color: darkgray; padding: 10px;">
+                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="d-flex col-3">
-                                <div style="background-color: darkgray; padding: 10px;">
-                                    <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
-                                </div>
                             </div>
-
-                        </div>
+                        </a>
                     </div>
 
-                    <div class="col-12" style="background-color: lightgray; margin-bottom: 15px;">
-                        <div class="row">
+                    <div class="col-12 button-styles">
+                        
+                            <div class="row">
 
-                            <div class="d-flex col-9" style="padding: 10px">
-                                <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" style="max-width: 80px;" />
-                                <div style="max-width: 220px;">
-                                    <p class="d-flex">Code Samples on Github</p>
+                                <div class="d-flex col-9" style="padding: 10px">
+                                    <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" style="max-width: 80px;" />
+                                    <div class="container" style="max-width: 220px; margin-left: 15px;">
+                                        <p class="d-flex about-me-text">Download CV</p>
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="d-flex col-3">
-                                <div style="background-color: darkgray; padding: 10px;">
-                                    <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                <div class="d-flex col-3">
+                                    <div style="background-color: darkgray; padding: 10px;">
+                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                    </div>
                                 </div>
-                            </div>
 
-                        </div>
+                            
+                            </div>
                     </div>
 
                 </div>
+
             </div>
 
 
