--- a/PortfolioProjectMVC/wwwroot/css/site.css
+++ b/PortfolioProjectMVC/wwwroot/css/site.css
@@ -301,3 +301,53 @@ body {
         max-width: 12.5%;
     }
 }
+
+/* About Me Section*/
+
+.button-section {
+    background-color: red;
+    min-height: 300px;
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: 0px;
+}
+
+.button-styles {
+    background-color: white;
+    margin-bottom: 15px;
+}
+
+.button-styles:hover {
+    background-color: var(--grey);
+}
+
+.button-styles:hover .about-me-text{
+    color: white;
+}
+
+.about-me-text {
+    margin-bottom: 0px;
+    font-weight: bold;
+    font-size: 25px;
+    color: var(--grey);
+}
+
+@media (max-width: 1000px) {
+    .about-me-text {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 400px) {
+    .about-me-text {
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 767px) {
+    .button-section {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
