fixed knowledge section issues

--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -22,13 +22,12 @@
     </div>
 
     <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: var(--blue)">
-        
-            <div class="container ">
-                <div class="row justify-content-center gx-md-4">
 
-                    <div class="col-md-3 col-sm-12 knowledge-box custom-gap" style="background-color: green;">
+         <div class="row justify-content-center">
+
+                    <div class="col-md-4 col-sm-12 knowledge-box" >
                     
-                            <div class="row justify-content-center align-items-center">
+                        <div class="row justify-content-center align-items-center knowledge-block">
                         
                                 <div class="col-lg-12">
                                     <img src="/Assets/images/SVGs/responsive-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" />
@@ -59,12 +58,12 @@
 
                                 </div>      
                    
-                            </div>
                         </div>
+                    </div>
 
-                    <div class="col-md-3 col-sm-12 knowledge-box custom-gap" style="background-color: green;">
+            <div class="col-md-4 col-sm-12 knowledge-box" >
 
-                            <div class="row justify-content-center align-items-center">
+                <div class="row justify-content-center align-items-center knowledge-block">
 
                                 <div class="col-lg-12">
                                     <img src="/Assets/images/SVGs/responsive-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" />
@@ -98,9 +97,9 @@
                             </div>
                         </div>
 
-                    <div class="col-md-3 col-sm-12 knowledge-box" style="background-color: green;">
+            <div class="col-md-4 col-sm-12 knowledge-box">
 
-                            <div class="row justify-content-center align-items-center">
+                <div class="row justify-content-center align-items-center knowledge-block">
 
                                 <div class="col-lg-12">
                                     <img src="/Assets/images/SVGs/responsive-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" />
@@ -134,8 +133,8 @@
                             </div>
                     </div>
             
-                 </div>
-            </div>
+         </div>
+           
     </div>
 
 </section>
@@ -339,16 +338,21 @@
                         <a href="https://github.com/Sam89001" target="_blank">
                             <div class="row">
 
-                                <div class="d-flex col-9" style="padding: 10px">
-                                    <img src="/Assets/images/SVGs/github-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" style="max-width: 80px;" />
-                                    <div class="container" style="max-width: 220px; margin-left: 15px;" >
+                                <div class="d-flex col-3" >
+                                    <div style="padding: 5px;">
+                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                    </div>
+                                </div>
+
+                                <div class="d-flex col-6" style="padding: 10px">
+                                    <div class="container" style="max-width: 220px; margin-left: 15px;">
                                         <p class="d-flex about-me-text">Code Samples on Github</p>
                                     </div>
                                 </div>
 
-                                <div class="d-flex col-3">
-                                    <div style="background-color: darkgray; padding: 10px;">
-                                        <img src="/Assets/images/SVGs/linked.svg" class="img-fluid" alt="Responsive Image" />
+                                <div class="d-flex col-3" >
+                                    <div style="padding: 5px;">
+                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
                                 </div>
 
@@ -360,15 +364,20 @@
                         <a href="https://www.linkedin.com/in/samuel-cole-586582229/" target="_blank">
                             <div class="row">
 
-                                <div class="d-flex col-9" style="padding: 10px">
-                                    <img src="/Assets/images/SVGs/linkedin-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" style="max-width: 80px;" />
+                                <div class="d-flex col-3">
+                                    <div style="padding: 5px;">
+                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                    </div>
+                                </div>
+
+                                <div class="d-flex col-6" style="padding: 10px">
                                     <div class="container" style="max-width: 220px; margin-left: 15px;">
-                                        <p class="d-flex about-me-text">Linked In Profile</p>
+                                        <p class="d-flex about-me-text">Linked In Page</p>
                                     </div>
                                 </div>
 
                                 <div class="d-flex col-3">
-                                    <div style="background-color: darkgray; padding: 10px;">
+                                    <div style="padding: 5px;">
                                         <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
                                 </div>
@@ -381,21 +390,31 @@
                         
                             <div class="row">
 
-                                <div class="d-flex col-9" style="padding: 10px">
-                                    <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" style="max-width: 80px;" />
+                                <div class="d-flex col-3">
+                                    <div style="padding: 5px;">
+                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                    </div>
+                                </div>
+
+                                <div class="d-flex col-6" style="padding: 10px">
                                     <div class="container" style="max-width: 220px; margin-left: 15px;">
                                         <p class="d-flex about-me-text">Download CV</p>
                                     </div>
                                 </div>
 
-                                <div class="d-flex col-3">
-                                    <div style="background-color: darkgray; padding: 10px;">
+                                <div class="d-flex col-3" >
+                                    <div style="padding: 5px;">
                                         <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
                                 </div>
 
                             
                             </div>
+                    </div>
+
+                    <div class="col-12 button-styles">
+
+                        <!-- code wars score here using codewars API-->
                     </div>
 
                 </div>
