--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -25,12 +25,16 @@
 
          <div class="row justify-content-center">
 
-                    <div class="col-md-4 col-sm-12 knowledge-box" >
+            <div class="col-md-4 col-sm-12 knowledge-box" >
                     
                         <div class="row justify-content-center align-items-center knowledge-block">
                         
                                 <div class="col-lg-12">
                                     <img src="/Assets/images/SVGs/responsive-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+
+                                <div class="col-lg-12">
+                                    <h1>Knowledge</h1>
                                 </div>
 
                                 <div class="col-lg-12">
@@ -70,6 +74,10 @@
                                 </div>
 
                                 <div class="col-lg-12">
+                                    <h1>Knowledge</h1>
+                                </div>
+
+                                <div class="col-lg-12">
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam venenatis volutpat accumsan. Curabitur porta metus eleifend ipsum tincidunt egestas.
                                         Nam at vehicula leo, ut gravida massa. Morbi tempor odio ipsum, luctus porta leo semper euismod. Nullam feugiat justo lorem.
@@ -103,6 +111,10 @@
 
                                 <div class="col-lg-12">
                                     <img src="/Assets/images/SVGs/responsive-svgrepo-com.svg" class="img-fluid" alt="Responsive Image" />
+                                </div>
+
+                                <div class="col-lg-12">
+                                    <h1>Knowledge</h1>
                                 </div>
 
                                 <div class="col-lg-12">
