--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -21,11 +21,11 @@
         <h3 class="section-headers" style="color: white">Knowledge</h3>
     </div>
 
-    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: var(--blue)">
+    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: var(--blue); padding-bottom: 100px;">
 
          <div class="row justify-content-center">
 
-            <div class="col-md-4 col-sm-12 knowledge-box" >
+            <div class="col-md-4 col-sm-12 knowledge-box-container bottom-border">
                     
                         <div class="row justify-content-center align-items-center knowledge-block">
                         
@@ -34,11 +34,11 @@
                                 </div>
 
                                 <div class="col-lg-12">
-                                    <h1>Knowledge</h1>
+                                    <h1 class="text-color">Front End</h1>
                                 </div>
 
                                 <div class="col-lg-12">
-                                    <p>
+                                    <p class="text-color">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam venenatis volutpat accumsan. Curabitur porta metus eleifend ipsum tincidunt egestas. 
                                         Nam at vehicula leo, ut gravida massa. Morbi tempor odio ipsum, luctus porta leo semper euismod. Nullam feugiat justo lorem. 
                                     </p>
@@ -65,7 +65,7 @@
                         </div>
                     </div>
 
-            <div class="col-md-4 col-sm-12 knowledge-box" >
+            <div class="col-md-4 col-sm-12 knowledge-box-container middle-border bottom-border">
 
                 <div class="row justify-content-center align-items-center knowledge-block">
 
@@ -74,11 +74,11 @@
                                 </div>
 
                                 <div class="col-lg-12">
-                                    <h1>Knowledge</h1>
+                                    <h1 class="text-color">Back-End</h1>
                                 </div>
 
                                 <div class="col-lg-12">
-                                    <p>
+                                    <p class="text-color">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam venenatis volutpat accumsan. Curabitur porta metus eleifend ipsum tincidunt egestas.
                                         Nam at vehicula leo, ut gravida massa. Morbi tempor odio ipsum, luctus porta leo semper euismod. Nullam feugiat justo lorem.
                                     </p>
@@ -105,7 +105,7 @@
                             </div>
                         </div>
 
-            <div class="col-md-4 col-sm-12 knowledge-box">
+            <div class="col-md-4 col-sm-12 knowledge-box-container">
 
                 <div class="row justify-content-center align-items-center knowledge-block">
 
@@ -114,11 +114,11 @@
                                 </div>
 
                                 <div class="col-lg-12">
-                                    <h1>Knowledge</h1>
+                                    <h1 class="text-color" >Other Skills</h1>
                                 </div>
 
                                 <div class="col-lg-12">
-                                    <p>
+                                    <p class="text-color">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam venenatis volutpat accumsan. Curabitur porta metus eleifend ipsum tincidunt egestas.
                                         Nam at vehicula leo, ut gravida massa. Morbi tempor odio ipsum, luctus porta leo semper euismod. Nullam feugiat justo lorem.
                                     </p>
