fixed contact section

--- a/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
+++ b/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="background-color: var(--blue)">
         <div class="container">
             &copy; 2023 - Samuel Cole's Portfolio - Icons by <a href="https://icons8.com/">Icons8</a>
         </div>
