--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -447,32 +447,39 @@
         <h3 class="section-headers" style="color: var(--blue)">Contact</h3>
     </div>
     
-    <div class="container-fluid section-width d-flex justify-content-center align-items-center" style="background-color: white; padding: 40px;">
-        <div class="row">
-           
-            <div class="col-md-6" style="background-color: red;">
-                <div style="background-color: lightgray; min-height: 300px;">
-                    <form id="sendEmailForm" method="post" asp-action="SendEmail">
-                        <input name="Name" placeholder="Name" />
-                        <input name="Email" placeholder="Email" />
-                        <textarea name="Query"></textarea>
-                        <input class="g-recaptcha"
-                               data-sitekey="@Configuration["GoogleReCaptcha:SiteKey"]"
-                               data-callback='onSubmit'
-                               data-action='submit'
-                               type="submit" placeholder="Query" value="Send Email" />
-                    </form>
+    <div class="container-fluid section-width d-flex " style="background-color: white; padding-bottom: 100px;">
+        <div class="container-fluid" style="width: 100%;">
+            <div class="row no-gutters" >
+
+                <div class="col-md-6" style="padding: 40px;">
+
+                    <div >
+
+                        <form id="sendEmailForm" method="post" asp-action="SendEmail">
+                            <input class="field" name="Name" placeholder="Name" />
+                            <input class="field" name=" Email" placeholder="Email" />
+
+                            <textarea class="message" placeholder="Enquiry" name="Query"></textarea>
+
+                            <input class="g-recaptcha button"
+                                   data-sitekey="@Configuration["GoogleReCaptcha:SiteKey"]"
+                                   data-callback='onSubmit'
+                                   data-action='submit'
+                                   type="submit" placeholder="Query" value="Send Email" />
+                        </form>
+
+                    </div>
+
+                </div>
+
+                <div class="col-md-6" style="padding: 40px;">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid" alt="Responsive Image" />
                 </div>
             </div>
-            
-            <div class="col-md-6" style="background-color: red;">
-                <div class="d-flex">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid" alt="Responsive Image" style="max-height: 200px;" />
-                </div>
-            </div>
-        
         </div>
+
     </div>
+
 </div>
 
 
