--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -449,33 +449,53 @@
     
     <div class="container-fluid section-width d-flex " style="background-color: white; padding-bottom: 100px;">
         <div class="container-fluid" style="width: 100%;">
+
             <div class="row no-gutters" >
 
-                <div class="col-md-6" style="padding: 40px;">
+                <div class="col-md-6 custom-col custom-col-md-6" style="padding: 40px; margin-bottom: 80px;">
 
                     <div >
 
                         <form id="sendEmailForm" method="post" asp-action="SendEmail">
-                            <input class="field" name="Name" placeholder="Name" />
-                            <input class="field" name=" Email" placeholder="Email" />
 
-                            <textarea class="message" placeholder="Enquiry" name="Query"></textarea>
+                            <input class="field" name="Name" placeholder="Name" required />
+                            <input class="field" name=" Email" placeholder="Email" type="email" required />
+                            
+                            <textarea class="message" placeholder="Enquiry" name="Query" required></textarea>
 
-                            <input class="g-recaptcha button"
-                                   data-sitekey="@Configuration["GoogleReCaptcha:SiteKey"]"
-                                   data-callback='onSubmit'
-                                   data-action='submit'
-                                   type="submit" placeholder="Query" value="Send Email" />
+                            <div class="d-flex" style="width: 100%;">
+                                <input class="checkbox" type="checkbox" name="mailing-list" id="mailing-list" required />
+                                <label class="checkbox-text" for="mailing-list" >Tick this box to confirm you consent to be added to a mailing list.</label>
+                            </div>
+
+                            <div class="d-flex" style="width: 100%;">
+                              
+                                <input class="g-recaptcha button"
+                                       data-sitekey="@Configuration["GoogleReCaptcha:SiteKey"]"
+                                       data-callback='onSubmit'
+                                       data-action='submit'
+                                       type="submit" placeholder="Query" value="Send Email" />
+
+                                
+                                    <div class="d-flex ms-auto">
+                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" style="max-height: 45px;" />
+                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" style="max-height: 45px; padding-left: 20px;" />
+                                    </div>
+
+                            </div>
+
                         </form>
 
                     </div>
 
                 </div>
 
-                <div class="col-md-6" style="padding: 40px;">
+                <div class="col-md-6 custom-col custom-col-md-6" style="padding: 40px;">
                     <img src="/Assets/images/SVGs/SC.svg" class="img-fluid" alt="Responsive Image" />
                 </div>
+
             </div>
+
         </div>
 
     </div>
