--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -7,10 +7,113 @@
 @inject Microsoft.Extensions.Configuration.IConfiguration Configuration
 
 <!-- Primary area that I will be writing my HTML -->
-<div class="full-screen-div" style="background-color: lightblue; min-height: 100vh; padding-top: 75px;">
-    <div class="text-center">
-        <h1 class="display-4">Home screen here</h1>
+<div style="background-color: lightblue; padding-top: 100px;">
+
+    <div style="z-index: 2; position: absolute; top: 100px; left: 40px;">
+        <h1 class="font-weight-bold" style="font-size: 150px;">Samuel Cole</h1>
+        <h2 class="font-weight-bold" style="font-size: 130px;">Front End Developer</h2>
     </div>
+
+    <div class="row h-100" style="z-index: 2;">
+        <div class="col-6" style="height: 100%;">
+
+            <div class="row">
+
+                <div class="col-md-12 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid left-side-custom-image mx-auto" alt="Responsive Image" />
+                </div>
+
+                <div class="col-md-12">
+                    <div class="row">
+
+                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                            <div class="skills-title">My Skills:</div>
+                        </div>
+
+                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                            <div class="skill">Javascript</div>
+                        </div>
+
+                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                            <div class="skill">C#</div>
+                        </div>
+
+                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                            <div class="skill">HTML</div>
+                        </div>
+
+                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                            <div class="skill">CSS</div>
+                        </div>
+
+                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                            <div class="skill">.NET</div>
+                        </div>
+
+                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                            <div class="skill">NodeJS</div>
+                        </div>
+
+                        <div class="col-12 center-text-formatting" style="height: 100%;">
+                            <div class="skill">MongoDB</div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-6" style="height: 100%;">
+
+            <div class="row">
+                <div class="col-12 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid mx-auto custom-image" alt="Responsive Image"  />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-6 center-images-formatting" >
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid  medium-displays mx-auto" alt="Responsive Image" />
+                </div>
+
+                <div class="col-6 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid  medium-displays mx-auto" alt="Responsive Image" />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-4 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid  small-displays mx-auto" alt="Responsive Image" />
+                </div>
+
+                <div class="col-4 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid  small-displays mx-auto" alt="Responsive Image" />
+                </div>
+
+                <div class="col-4 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid  small-displays mx-auto" alt="Responsive Image" />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-6 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid  medium-displays mx-auto" alt="Responsive Image" />
+                </div>
+
+                <div class="col-6 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid  medium-displays mx-auto" alt="Responsive Image" />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 center-images-formatting">
+                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid large-displays mx-auto" alt="Responsive Image" />
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 </div>
 
 <!-- Knowledge Section-->
@@ -458,9 +561,9 @@
 
                         <form id="sendEmailForm" method="post" asp-action="SendEmail">
 
-                            <input class="field" id="nameInput" name="Name" placeholder="Name" required />
+                            <input class="field" id="nameInput" name="Name" placeholder="Name" />
 
-                            <input class="field" id="emailInput" name="Email" placeholder="Email" type="email" required/>
+                            <input class="field" id="emailInput" name="Email" placeholder="Email" type="email" />
                             
                             <textarea class="message" id="queryInput" placeholder="Enquiry" name="Query"></textarea>
 
@@ -503,6 +606,9 @@
     </div>
 
 </div>
+
+
+
 
 
 
